// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.ContextMenu allowTags=undefined 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu ccrKey="<UU5.Parrot.Page ccrKey='UU5.Parrot.Page' />" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu checkGrammar=false 1`] = `
<Popover
  checkGrammar={false}
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu checkGrammar=true 1`] = `
<Popover
  checkGrammar={true}
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu checkHighlight=false 1`] = `
<Popover
  checkHighlight={false}
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu checkHighlight=true 1`] = `
<Popover
  checkHighlight={true}
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu checkSpaces=false 1`] = `
<Popover
  checkSpaces={false}
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu checkSpaces=true 1`] = `
<Popover
  checkSpaces={true}
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu className="my-classname" 1`] = `
<Popover
  className="uu5-bricks-context-menu my-classname"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu compactSubmenu=false 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu compactSubmenu=true 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu content="This is Content from ContentMixin" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  content="This is Content from ContentMixin"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu content=12345 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  content={12345}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu controlled=false 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu controlled=true 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu default props 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu disabled=false 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu disabled=true 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu docKit examples UU5.Bricks.ContextMenu example make snapshot 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  footer="Footer"
  header="Header"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
  shown={true}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu docKit examples UU5.Bricks.ContextMenu myComponent from allowTags is used 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  footer="Footer"
  header="Header"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
  shown={true}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu dynamic=false 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu dynamic=true 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  dynamic={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu footer={"type":"div","key":null,"ref":null,"props":{"children":"Footer of section"},"_owner":null,"_store":{}} 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  footer={
    <div>
      Footer of section
    </div>
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu header={"type":"div","key":null,"ref":null,"props":{"children":"Header of section"},"_owner":null,"_store":{}} 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  header={
    <div>
      Header of section
    </div>
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu hidden=false 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu hidden=true 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu id="myId" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="myId-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu ignoreHTML=false 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu ignoreHTML=true 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu level="0" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  level="0"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu level="1" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  level="1"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu level="2" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  level="2"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu level="3" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  level="3"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu level="4" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  level="4"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu level="5" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  level="5"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu level="6" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  level="6"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu level=0 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  level={0}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu level=1 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu level=2 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  level={2}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu level=3 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  level={3}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu level=4 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  level={4}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu level=5 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  level={5}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu level=6 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  level={6}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu mainAttrs=undefined 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu name="myName" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="bigBox" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBox"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="bigBoxCollection" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="box" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="boxCollection" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="boxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="container" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="inline" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="page" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="smallBox" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="smallBoxCollection" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="spa" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu noIndex=false 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu noIndex=true 1`] = `
<Popover
  className="uu5-bricks-context-menu uu5-noindex"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu pureRender=false 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu pureRender=true 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={true}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu selected=false 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu selected=true 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
  selected={true}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu shown=false 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu shown=true 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
  shown={true}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu style="padding:8px; borderRadius: 2px" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu style={"backgroundColor":"red","color":"blue"} 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu textCorrector=false 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
  textCorrector={false}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu textCorrector=true 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
  textCorrector={true}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu tooltip="My Tooltip" 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
  tooltip="My Tooltip"
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu underline=false 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;

exports[`UU5.Bricks.ContextMenu underline=true 1`] = `
<Popover
  className="uu5-bricks-context-menu"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  ref_={[Function]}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</Popover>
`;
